--- a/app.json
+++ b/app.json
@@ -4,10 +4,12 @@
     "slug": "arcade",
     "version": "1.0.1",
     "orientation": "portrait",
-    "icon": "./assets/burger.png",
+    "icon": "./assets/app.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "backgroundColor": "#76caf5"
+      "backgroundColor": "#76caf5",
+      "image": "./assets/app.png",
+      "resizeMode": "contain"
     },
     "ios": {
       "supportsTablet": true,
@@ -19,7 +21,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/burger.png"
+      "favicon": "./assets/app.png"
     },
     "plugins": [
       "expo-font"
